feat: 将网页搜索的内容保存到Milvus中

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,7 +34,7 @@ spring:
           port: 19530
           username: root
           password: Milvus
-        databaseName: nana
+        databaseName: default
         collectionName: vector_store
         embeddingDimension: 1024
         indexType: IVF_FLAT
