feat:基本记忆功能完成

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,6 +29,11 @@ spring:
           model: lrs33/bce-embedding-base_v1:latest
           num-batch: 512
           num-ctx: 512
+    moonshot:
+      api-key: ${api.mn.sk}
+      chat:
+        options:
+          model: kimi-latest
     vectorstore:
       milvus:
         client:
