feat:每日发文功能完成

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -58,6 +58,11 @@ spring:
 searxng:
   base-url: http://localhost:8041
 
+weather:
+  base-url: ${weather.base-url}
+  sk: ${weather.sk}
+  location: 101180901
+
 
 logging:
   level:
