feat:补全每日发文功能

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -61,6 +61,8 @@ searxng:
 weather:
   base-url: ${weather.base-url}
   sk: ${weather.sk}
+  kid: ${weather.kid}
+  sub: ${weather.sub}
   location: 101180901
 
 
